--- a/templates/default.html
+++ b/templates/default.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generated Page</title>
+    <title>{{Metadata.title}}</title>
 </head>
 <body>
+    <h1>{{Metadata.title}}</h1>
     {{{Content}}}
 </body>
 </html>
