--- a/code/templates/layout.html
+++ b/code/templates/layout.html
@@ -21,7 +21,7 @@
     </main>
     
     <footer class="page-footer">
-        <small>Copyright {{siteAuthor}}</small>
+        <small>Copyright Asbjørn Brandt</small>
     </footer>
 </body>
 </html>
