--- a/code/templates/posts-index.html
+++ b/code/templates/posts-index.html
@@ -8,6 +8,7 @@
                 <article class="post-summary">
                     <h2><a href="{{Url}}">{{Title}}</a></h2>
                     <time class="post-date">{{formatDate PublishedDate}}</time>
+                    <p class="post-excerpt">{{Excerpt}}</p>
                 </article>
             {{/each}}
         </div>
